--- a/html/Views/User/profile.phtml
+++ b/html/Views/User/profile.phtml
@@ -15,7 +15,7 @@
 								</div>
 								<div id="croppbox"></div>
 								<div id="img-form-wrapper" class="panel-body">
-									<form action="/avatar-update" method="POST" enctype="multipart/form-data" id="upload-img-form">
+									<form action="/user/update-avatar" method="POST" enctype="multipart/form-data" id="upload-img-form">
 										<div class="row">
 											<div class="col-sm-4">
 												<div class="btn btn-default btn-block btn-upload"><i class="fa fa-upload"></i><input type="file" accept="image/*" name="avatar-input" required></div>
