pack controller, permissions, addfile

--- a/html/Views/Error/error406.phtml
+++ b/html/Views/Error/error406.phtml
@@ -1,2 +1,3 @@
+<?php $this->viewFile('Views/miscellaneous/flash_message.phtml'); ?>
 <h1 class="jumbotron">ERROR 406</h1>
 <h2>The server can only generate a response with content type not accepted by the client.</h2>
