--- a/html/Views/Error/error404.phtml
+++ b/html/Views/Error/error404.phtml
@@ -9,6 +9,11 @@
 	<div class="alert alert-danger alert-dismisible"><button type="button" class="close" data-dismiss="alert"><i class="fa fa-close"></i></button>This is some alert</div>
 	<div class="alert alert-info alert-dismisible"><button type="button" class="close" data-dismiss="alert"><i class="fa fa-close"></i></button>This is some alert</div>
 	
+	<form id="addfile" action="/pack/7/add-file" method="POST" enctype="multipart/form-data">
+		<input type="file" name="file"/>
+		<input type="submit">
+	</form>
+
 	<form id="addperm">
 		<input type="password" name="authorizationPassword"/>
 		<br />
@@ -26,6 +31,30 @@
 			$.ajax({
 				type: 'POST',
 				url: "/pack/8/update-permissions",
+				data: $(this).serialize(),
+				dataType : "json",
+			});
+		});
+	</script>
+
+	<form id="addperm2">
+		<h3>GG</h3>
+		<input type="password" name="authorizationPassword"/>
+		<br />
+		<input type="text" name="group[0][id]"/>
+		<input type="checkbox" name="group[0][view]" value="1">
+		<input type="checkbox" name="group[0][edit]" value="1">
+		<input type="checkbox" name="group[0][remove]" value="1">
+		<br />
+		<input type="submit">
+	</form>
+
+	<script>
+		$("#addperm2").submit(function(event){
+			event.preventDefault();
+			$.ajax({
+				type: 'POST',
+				url: "/pack/7/update-permissions",
 				data: $(this).serialize(),
 				dataType : "json",
 			});
