--- a/html/Views/Error/error405.phtml
+++ b/html/Views/Error/error405.phtml
@@ -1,2 +1,3 @@
+<?php $this->viewFile('Views/miscellaneous/flash_message.phtml'); ?>
 <h1 class="jumbotron">ERROR 405</h1>
 <h2>Request method is not allowed.</h2>
