--- a/html/Includes/styles/style.scss
+++ b/html/Includes/styles/style.scss
@@ -179,7 +179,7 @@ hr{
 
 /*----*/
 
-/*inputs*/
+/*form*/
 
 .form-control:not(.search-input){
 	color: black;
@@ -195,6 +195,9 @@ hr{
 	outline: none !important;
 	border: 1px solid #178599;
 	box-shadow: none;
+}
+.form-group:last-of-type{
+	margin-bottom: 0px;
 }
 .has-error input, .has-error input:focus{
 	outline: none !important;
@@ -289,6 +292,12 @@ hr{
 		border: 0px;
 		padding-top: 0px;
 		padding-left: 10px;
+	}
+	.panel-footer{
+		background-color: #f0f0f0;
+		border: 0px;
+		padding: 0px;
+		padding-top: 10px;
 	}
 }
 
@@ -637,6 +646,33 @@ footer{
 	textarea[name="tags"]{
 		resize: vertical;
 		min-height: 60px;
+	}
+}
+
+/*----*/
+
+/*newGroup*/
+
+.new-group-wrapper{
+	textarea[name="description"]{
+		resize: vertical;
+		min-height: 105px;
+	}
+	textarea[name="users"]{
+		resize: vertical;
+		min-height: 60px;
+	}
+}
+
+/*----*/
+
+/*group*/
+
+.group-wrapper{
+	.added-at-wrapper{
+		i{
+			margin-right: 5px;
+		}
 	}
 }
 
