--- a/html/Views/Error/error404.phtml
+++ b/html/Views/Error/error404.phtml
@@ -10,7 +10,7 @@
 	<div class="alert alert-info alert-dismisible"><button type="button" class="close" data-dismiss="alert"><i class="fa fa-close"></i></button>This is some alert</div>
 	
 	<form id="addfile" action="/pack/7/add-file" method="POST" enctype="multipart/form-data">
-		<input type="file" name="file"/>
+		<div class="btn btn-default btn-upload"><i class="fa fa-upload"></i><input type="file" name="file" required></div>
 		<input type="submit">
 	</form>
 
@@ -30,7 +30,7 @@
 			event.preventDefault();
 			$.ajax({
 				type: 'POST',
-				url: "/pack/8/update-permissions",
+				url: "/pack/7/update-permissions",
 				data: $(this).serialize(),
 				dataType : "json",
 			});
@@ -61,16 +61,17 @@
 		});
 	</script>
 	
-	<form action="/create/group" method="POST">
+	<h3>Group</h3>
+
+	<form action="/group/create" method="POST">
 		<input type="text" name="name"/>
 		<input type="text" name="description"/>
-		<input type="checkbox" name="private" value="1">
 		<br /> 
 		<input type="submit">
 	</form>
 
 	<form id="adduserform"> 
-		<input type="text" name="user[0][username]" placeholder="username"/>
+		<input type="text" name="users" placeholder="username"/>
 		<input type="submit">
 	</form>
 
@@ -79,7 +80,7 @@
 			event.preventDefault();
 			$.ajax({
 				type: 'POST',
-				url: "/group/1/remove-users",
+				url: "/group/2/add-users",
 				data: $(this).serialize(),
 				dataType : "json",
 			});
