--- a/html/Views/User/settings.phtml
+++ b/html/Views/User/settings.phtml
@@ -5,8 +5,8 @@
 		<div class="row">
 			<div class="col-sm-8">
 				<div class="panel panel-default">
-					<div class="panel-body form-wrapper">
-						<form action="/user/update" method="POST" class="form-horizontal" id="settings-form">
+					<form action="/user/update" method="POST" class="form-horizontal" id="settings-form">
+						<div class="panel-body form-wrapper">
 							<div class="form-group">
 								<label for="newUsername" class="col-sm-3 control-label">Username</label>
 								<div class="col-sm-9">
@@ -52,13 +52,15 @@
 									<input type="password" class="form-control" name="authorizationPassword" required>
 								</div>
 							</div>
-							<div class="form-group">
+						</div>
+						<div class="panel-footer">
+							<div class="row">
 								<div class="col-sm-offset-8 col-sm-4">
 									<button type="submit" class="btn btn-success btn-block">Save</button>
 								</div>
 							</div>
-						</form>
-					</div>
+						</div>
+					</form>
 				</div>
 			</div>
 			<div class="col-sm-4">
