--- a/html/Views/basic_template.phtml
+++ b/html/Views/basic_template.phtml
@@ -38,7 +38,7 @@
 									</ul>
 								</li>
 							<?php else: ?>
-								<li>	
+								<li class="text-right">	
 									<a href="#" data-toggle="modal" data-target="#sign-in-modal">Sign in</a>
 								</li>
 							<?php endif ?>
