--- a/html/Views/Pack/settings.phtml
+++ b/html/Views/Pack/settings.phtml
@@ -2,7 +2,33 @@
 	<div class="container">
 		<?php $this->viewFile('Views/miscellaneous/flash_message.phtml'); ?>
 		<h1><a href="/pack/<?=$pack->getId()?>" class="link text-muted"><?=$pack->getName()?></a> <span class="text-muted">/</span> Settings</h1>
+		
 		<div class="panel panel-default" id="user-info">
+			<div class="panel-heading">
+				<h2>Accessibility</h2>
+			</div>
+			<form action="/pack/<?=$pack->getId()?>/update" method="POST" class="form-horizontal">
+				<div class="panel-body">
+					<div class="form-group">
+						<label for="private" class="col-sm-3 control-label">Private</label>
+						<div class="col-sm-1">
+							<label class="checkbox">
+								<input type="checkbox" class="form-control" name="private" value="1" <?=($pack->getPrivate() ? "checked" : null)?>>
+								<i class="fa checkbox-button"></i>
+							</label>
+						</div>
+						<p class="col-sm-8 help-block">
+							If your pack is private, nobody without permission will see it.
+						</p>
+					</div>
+				</div>
+				<div class="panel-footer text-right">
+					<button type="submit" class="btn btn-success"><i class="fa fa-save"></i> Save</a>
+				</div>
+			</form>	
+		</div>	
+
+		<div class="panel panel-default">
 			<div class="panel-heading">
 				<h2>Permissions</h2>
 			</div>
@@ -11,6 +37,7 @@
 				<div class="panel-body" id="permissions">
 					<?php if(!$pack->getPrivate()): ?>
 						<p>This pack is public. Every one can see it</p>
+						<hr />
 					<?php endif; ?>
 					
 					<?php if($pack->getPackPermissions()->count()): ?>
@@ -72,11 +99,12 @@
 				</div>
 
 				<div class="panel-footer text-right">
-					<button type="button" class="btn btn-info" id="new-permission-button"><i class="fa fa-plus"></i> Add</a>
+					<button type="button" class="btn btn-info" name="new-permission-button" value="user"><i class="fa fa-user"></i> Add</a>
+					<button type="button" class="btn btn-info" name="new-permission-button" value="group"><i class="fa fa-users"></i> Add</a>
 					<button type="submit" class="btn btn-success"><i class="fa fa-save"></i> Save</a>
 				</div>
 			</form>
-
+		
 		</div>
 	</div>
 
