--- a/html/Views/User/profile.phtml
+++ b/html/Views/User/profile.phtml
@@ -70,7 +70,7 @@
 								<?php endif; ?>
 							<?php endforeach; ?>
 						<?php else: ?>
-							<p>You dont have any packs yet.</p>
+							<p>You do not have any packs yet.</p>
 						<?php endif; ?>
 					</div>
 					<div class="panel-footer text-right">
@@ -101,7 +101,7 @@
 								<?php endif; ?>
 							<?php endforeach; ?>
 						<?php else: ?>
-							<p>You dont have any groups yet.</p>
+							<p>You do not have any groups yet.</p>
 						<?php endif; ?>
 					</div>
 					<div class="panel-footer text-right">
