--- a/html/Views/basic_template.phtml
+++ b/html/Views/basic_template.phtml
@@ -18,6 +18,7 @@
 		<script src="/Includes/javascript/avatar-n-cropper.js"></script>
 		<script src="/Includes/javascript/img-group-button.js"></script>
 		<script src="/Includes/javascript/delete-file.js"></script>
+		<script src="/Includes/javascript/group.js"></script>
 		<script src="/Includes/javascript/add-permission.js"></script>
 		<script src="/Includes/javascript/application.js"></script>
 	</head>
