--- a/html/Views/User/show.phtml
+++ b/html/Views/User/show.phtml
@@ -3,7 +3,7 @@
 		<?php $this->viewFile('Views/miscellaneous/flash_message.phtml'); ?>
 		<div class="row">
 			<div class="col-sm-4 col-md-3">
-				<div class="panel panel-default" id="user-info">
+				<div class="panel panel-default">
 					<div class="row">
 						<div class="col-xs-4 col-sm-12">
 							<div id="avatar-wrapper">
@@ -28,7 +28,28 @@
 						<h2><?=$user->getUsername()?>'s packs</h2>
 					</div>
 					<div class="panel-body">
-						<p>You dont have any packs yet.</p>
+						<?php if($user->getPacks()->count()): ?>
+							<?php foreach($user->getPacks() as $index => $pack): ?>
+								<?php if(!$pack->getPrivate()): ?>
+									<div class="row">
+										<div class="col-xs-9">
+											<a class="link" href="/pack/<?=$pack->getId()?>">
+												<?=$pack->getName()?>
+											</a>
+										</div>
+										<div class="col-xs-3 text-right">
+											<i class="fa fa-pencil-square"></i>
+											<?=$pack->getUpdatedAt("j M o")?>
+										</div>
+									</div>
+									<?php if($index != $user->getPacks()->count() - 1): ?>
+										<hr />
+									<?php endif; ?>
+								<?php endif; ?>
+							<?php endforeach; ?>
+						<?php else: ?>
+							<p><?=$user->getUsername()?> has no packs.</p>
+						<?php endif; ?>
 					</div>
 				</div>
 			</div>
