--- a/html/Views/Pack/showFile.phtml
+++ b/html/Views/Pack/showFile.phtml
@@ -41,8 +41,15 @@
 						<h2>Description</h2>
 					</div>
 					<div class="panel-body">
-						<p><?=$file->getDescription()?></p>
+						<p id="description"><?=$file->getDescription()?></p>
+						<textarea id="description-edit" rows="4" cols="50" class="form-control" name="description" validation="ajax" validation-event="keyup" validation-type="description" placeholder="Write something about this group."><?=$file->getDescription()?></textarea>
 					</div>
+					<?php if($permission >= 2): ?>
+						<div class="panel-footer text-right">
+							<button class="btn btn-info" name="edit-description"><i class="fa fa-pencil-square-o"></i> Edit</button>
+							<button class="btn btn-success" name="save-description" pack="<?=$pack->getId()?>" file="<?=$file->getName()?>"><i class="fa fa-save"></i> Save</button>
+						</div>
+					<?php endif; ?>
 				</div>
 			</div>
 		</div>
@@ -62,7 +69,7 @@
 							});
 						});
 					});
-					</script>
+				</script>
 			</div>
 		</div>
 	</div>
