--- a/html/Views/User/profile.phtml
+++ b/html/Views/User/profile.phtml
@@ -74,7 +74,7 @@
 						<?php endif; ?>
 					</div>
 					<div class="panel-footer text-right">
-						<a href="/pack/new" class="btn btn-success">Add <i class="fa fa-archive"></i></a>
+						<a href="/pack/new" class="btn btn-success">New <i class="fa fa-archive"></i></a>
 					</div>
 				</div>
 
@@ -105,7 +105,7 @@
 						<?php endif; ?>
 					</div>
 					<div class="panel-footer text-right">
-						<a href="/group/new" class="btn btn-success">Add <i class="fa fa-users"></i></a>
+						<a href="/group/new" class="btn btn-success">New <i class="fa fa-users"></i></a>
 					</div>
 				</div>
 			</div>
