--- a/html/Includes/styles/style.css
+++ b/html/Includes/styles/style.css
@@ -9,7 +9,7 @@ http://paletton.com/#uid=b1Z3m0d0kvHqnlHxkrLv7-QlxIagj
   font-family: "Ubuntu-monospace";
   src: url("UbuntuMono-R.ttf"); }
 html {
-  min-width: 320px; }
+  min-width: 420px; }
 
 section .container {
   padding-top: 20px; }
@@ -263,9 +263,23 @@ section .btn-upload input, .modal .btn-upload input {
 
 /*----*/
 /*pagination*/
-.pagination a {
+.pagination button {
+  background: 0px;
   border-radius: 0px !important;
-  border: 0px !important; }
+  border: 0px !important;
+  color: #025A6A; }
+
+.pagination button.active {
+  font-size: 16px;
+  line-height: 16px;
+  font-weight: bold; }
+
+.pagination button:hover {
+  color: #014450;
+  text-decoration: none; }
+
+.pagination {
+  margin: 10px 0px; }
 
 /*----*/
 /*modal*/
@@ -591,7 +605,7 @@ footer {
   font-size: 14px;
   text-overflow: initial;
   overflow: visible;
-  overflow-x: scroll;
+  overflow-x: auto;
   white-space: pre; }
 .file-wrapper code * {
   padding: 0px;
@@ -603,8 +617,6 @@ footer {
   padding: 0px;
   border: 0px;
   margin-bottom: -10px; }
-.file-wrapper #description {
-  white-space: pre; }
 
 /*----*/
 /*pack-settings-wrapper*/
@@ -630,7 +642,7 @@ footer {
   margin-right: 10px; }
 
 /*----*/
-/*pack-settings-wrapper*/
+/*group-wrapper*/
 .group-wrapper #users-list .form-control {
   height: 20px;
   font-size: 14px;
@@ -639,28 +651,26 @@ footer {
 .group-wrapper button[name="save-users"] {
   margin-right: 10px;
   display: none; }
-.group-wrapper button[name="save-description"] {
-  display: none; }
-.group-wrapper textarea[name="description"] {
-  resize: vertical;
-  min-height: 105px;
-  display: none; }
-.group-wrapper #description {
-  white-space: pre; }
 
 /*----*/
 /*pack*/
-.pack-wrapper #description {
-  white-space: pre; }
-.pack-wrapper button[name="save-description"] {
-  display: none; }
-.pack-wrapper textarea[name="description"] {
-  resize: vertical;
-  min-height: 105px;
-  display: none; }
-.pack-wrapper #description {
-  white-space: pre; }
-
 /*----*/
+#description {
+  word-wrap: break-word;
+  word-break: break-all;
+  white-space: pre-line; }
+
+button[name="save-description"] {
+  display: none; }
+
+textarea[name="description"] {
+  resize: vertical;
+  min-height: 70px;
+  display: none;
+  text-overflow: clip; }
+
+p.comment {
+  word-wrap: break-word;
+  word-break: break-all; }
 
 /*# sourceMappingURL=style.css.map */
