--- a/html/Views/Group/newGroup.phtml
+++ b/html/Views/Group/newGroup.phtml
@@ -7,8 +7,8 @@
 			<div class="panel-heading">
 				<h2>Group information</h2>
 			</div>
-			<div class="panel-body">
-				<form action="/group/create" method="POST" class="form-horizontal" id="new-group-form">
+			<form action="/group/create" method="POST" class="form-horizontal" id="new-group-form">
+				<div class="panel-body">
 					<div class="form-group">
 						<label for="name" class="col-sm-3 control-label">Group name</label>
 						<div class="col-sm-9">
@@ -21,18 +21,11 @@
 							<textarea rows="4" cols="50" class="form-control" name="description" validation="ajax" validation-event="keyup" validation-type="description" placeholder="Write something about this group."></textarea>
 						</div>
 					</div>
-					<div class="form-group">
-						<label for="users" class="col-sm-3 control-label">Users</label>
-						<div class="col-sm-9">
-							<textarea rows="2" cols="50" class="form-control" name="users" placeholder="Add users to this group."></textarea>
-						</div>
-					</div>
-					<hr />
-					<div class="col-sm-offset-8 col-sm-4">
-						<button type="submit" class="btn btn-success btn-block">Save</button>
-					</div>
-				</form>
-			</div>
+				</div>
+				<div class="panel-footer text-right">
+					<button type="submit" class="btn btn-success"><i class="fa fa-save"></i> Save</button>
+				</div>
+			</form>
 		</div>
 	</div>
 
