--- a/html/Views/Pack/filesList.phtml
+++ b/html/Views/Pack/filesList.phtml
@@ -7,11 +7,11 @@
 				</a>
 			</div>
 			<?php if($permission >=2): ?>
-				<div class="col-xs-5 text-right">
+				<div class="col-xs-4 col-sm-5 text-right">
 					<i class="fa fa-pencil-square"></i>
 					<?=$file->getUpdatedAt("j M o")?>
 				</div>
-				<div class="col-xs-1 text-right">
+				<div class="col-xs-2 col-sm-1 text-right">
 					<button class="btn btn-danger btn-sm" name="delete-file" pack="<?=$pack->getId()?>" file="<?=$file->getName()?>"><i class="fa fa-trash"></i></button>
 				</div>
 			<?php else: ?>
